--- a/index.html
+++ b/index.html
@@ -21,6 +21,35 @@
         </ul>
     </nav>
 </header>
+
+<main>
+    <section id="home">
+        <h2>Discover Our Coffee Delights</h2>
+        <div class="coffee-images">
+            <img src="images/coffee 1.jpg" alt="Coffee 1">
+            <img src="images/coffee 2.jpg" alt="Coffee 2">
+            <img src="images/coffee 3.jpg" alt="Coffee 3">
+            <img src="images/coffee 4.cms" alt="Coffee 4">
+            <img src="images/coffee 5.jpg" alt="Coffee 5">
+        </div>
+        <div class="home-text">
+            <h3>Welcome to our Coffee Haven!</h3>
+            <p>
+                Indulge in the aroma of freshly roasted coffee beans and savor the rich flavors of our handcrafted
+                brews.
+                At Coffee Haven, we're passionate about delivering a unique coffee experience that awakens your
+                senses. <br><br>
+
+                Explore our carefully curated menu of espresso classics, specialty lattes, and delicious pastries.
+                Whether you're seeking a cozy spot to unwind or a place to catch up with friends, our warm and
+                inviting ambiance awaits. <br><br>
+
+                Join us on a journey of exceptional coffee, where every cup tells a story.
+                Let the magic of Coffee Haven awaken your passion for the perfect cup of coffee. <br>
+            </p>
+        </div>
+    </section>
+</main>
     
 
     <script src="script.js"></script>
