Design footer section
Design footer section with HTML and CSS.

--- a/index.html
+++ b/index.html
@@ -1,58 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Heaven.com</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-<header> 
+    <header>
 
-    <h1 class="text-animation" id="home-link">Welcome to Coffee Haven!!</h1>
-    <nav>
-        <ul>
-            <li><a class="head" href="#home-link"><b>Home</b></a></li>
-            <li><a href="#menu"><b>Menu</b></a></li>
-            <li><a href="#about"><b>About us</b></a></li>
-            <li><a href="#contact"><b>Contact</b></a></li>
-            <li><a href="#location"><b>Location</b></a></li>
-        </ul>
-    </nav>
-</header>
+        <h1 class="text-animation" id="home-link">Welcome to Coffee Haven!!</h1>
+        <nav>
+            <ul>
+                <li><a class="head" href="#home-link"><b>Home</b></a></li>
+                <li><a href="#menu"><b>Menu</b></a></li>
+                <li><a href="#about"><b>About us</b></a></li>
+                <li><a href="#contact"><b>Contact</b></a></li>
+                <li><a href="#location"><b>Location</b></a></li>
+            </ul>
+        </nav>
+    </header>
 
-<main>
-    <section id="home">
-        <h2>Discover Our Coffee Delights</h2>
-        <div class="coffee-images">
-            <img src="images/coffee 1.jpg" alt="Coffee 1">
-            <img src="images/coffee 2.jpg" alt="Coffee 2">
-            <img src="images/coffee 3.jpg" alt="Coffee 3">
-            <img src="images/coffee 4.cms" alt="Coffee 4">
-            <img src="images/coffee 5.jpg" alt="Coffee 5">
-        </div>
-        <div class="home-text">
-            <h3>Welcome to our Coffee Haven!</h3>
-            <p>
-                Indulge in the aroma of freshly roasted coffee beans and savor the rich flavors of our handcrafted
-                brews.
-                At Coffee Haven, we're passionate about delivering a unique coffee experience that awakens your
-                senses. <br><br>
+    <main>
+        <section id="home">
+            <h2>Discover Our Coffee Delights</h2>
+            <div class="coffee-images">
+                <img src="images/coffee 1.jpg" alt="Coffee 1">
+                <img src="images/coffee 2.jpg" alt="Coffee 2">
+                <img src="images/coffee 3.jpg" alt="Coffee 3">
+                <img src="images/coffee 4.cms" alt="Coffee 4">
+                <img src="images/coffee 5.jpg" alt="Coffee 5">
+            </div>
+            <div class="home-text">
+                <h3>Welcome to our Coffee Haven!</h3>
+                <p>
+                    Indulge in the aroma of freshly roasted coffee beans and savor the rich flavors of our handcrafted
+                    brews.
+                    At Coffee Haven, we're passionate about delivering a unique coffee experience that awakens your
+                    senses. <br><br>
 
-                Explore our carefully curated menu of espresso classics, specialty lattes, and delicious pastries.
-                Whether you're seeking a cozy spot to unwind or a place to catch up with friends, our warm and
-                inviting ambiance awaits. <br><br>
+                    Explore our carefully curated menu of espresso classics, specialty lattes, and delicious pastries.
+                    Whether you're seeking a cozy spot to unwind or a place to catch up with friends, our warm and
+                    inviting ambiance awaits. <br><br>
 
-                Join us on a journey of exceptional coffee, where every cup tells a story.
-                Let the magic of Coffee Haven awaken your passion for the perfect cup of coffee. <br>
-            </p>
-        </div>
-    </section>
-</main>
-    
+                    Join us on a journey of exceptional coffee, where every cup tells a story.
+                    Let the magic of Coffee Haven awaken your passion for the perfect cup of coffee. <br>
+                </p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Coffee Shop. All rights reserved.</p>
+    </footer>
+
 
     <script src="script.js"></script>
 
 </body>
+
 </html>
