Design Menu page
Design menu page using HTML and CSS.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,46 @@
                 </p>
             </div>
         </section>
+        <section id="menu">
+            <h2>Our Coffee Menu</h2>
+            <div class="menu-div">
+                <img class="background-img" src="images/background.jpg" alt="background-image.jpg">
+            </div>
+            <h3>Coffee Flavours</h3>
+            <ul>
+                <li>Espresso</li>
+                <li>Cappuccino</li>
+                <li>Latte</li>
+                <li>Cortado</li>
+                <li>Americano</li>
+            </ul>
+            <table>
+                <tr>
+                    <th>Coffee</th>
+                    <th>Price</th>
+                </tr>
+                <tr>
+                    <td>Milk Coffee</td>
+                    <td>$2.50</td>
+                </tr>
+                <tr>
+                    <td>Iced Coffee</td>
+                    <td>$3.00</td>
+                </tr>
+                <tr>
+                    <td>Cream Coffee</td>
+                    <td>$3.50</td>
+                </tr>
+                <tr>
+                    <td>Butter Coffee</td>
+                    <td>$4.00</td>
+                </tr>
+                <tr>
+                    <td>Butter Milk</td>
+                    <td>$2.75</td>
+                </tr>
+            </table>
+        </section>
     </main>
 
     <footer>
