Design about page
Design about page using HTML and CSS.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,31 @@
                 </tr>
             </table>
         </section>
+        <section id="about">
+            <h2>About Us</h2>
+            <div class="about-div">
+                <div class="about-left-section">
+                    <h3>About Coffee Haven!!</h3>
+                    <p>
+                        Indulge in the aroma of freshly roasted coffee beans and savor the rich flavors of our
+                        handcrafted brews.
+                        At Coffee Haven, we're passionate about delivering a unique coffee experience that awakens your
+                        senses. <br><br>
+
+                        Explore our carefully curated menu of espresso classics, specialty lattes, and delicious
+                        pastries.
+                        Whether you're seeking a cozy spot to unwind or a place to catch up with friends, our warm and
+                        inviting ambiance awaits. <br><br>
+
+                        Join us on a journey of exceptional coffee, where every cup tells a story.
+                        Let the magic of Coffee Haven awaken your passion for the perfect cup of coffee. <br>
+                    </p>
+                </div>
+                <div class="about-right-section">
+                    <img class="bg-img" src="images/background2.jpg" alt="background-img.jpg">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
