--- a/index.html
+++ b/index.html
@@ -116,6 +116,28 @@
                 </div>
             </div>
         </section>
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <div class="contact-container">
+                <form method="post">
+                    <div class="form-group">
+                        <label for="name">Your Name:</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Your Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="4" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit">Send Message</button>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer>
