--- a/index.html
+++ b/index.html
@@ -138,6 +138,22 @@
                 </form>
             </div>
         </section>
+    </section>
+    <section id="location">
+        <h2>Our Location</h2>
+        <div class="location-container">
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1234.567890123456!2d0.000000!3d0.000000!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMDDCsDA0JzEwLjYiTiAwwrAzMycxOC4yIlc!5e0!3m2!1sen!2suk!4v1626141412750!5m2!1sen!2suk"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="address">
+                <h3>Our Coffee Haven</h3>
+                <p>1234 Tasty Avenue, Colombo, Sri Lanka</p>
+                <p>Postal Code: 11010</p>
+            </div>
+        </div>
+    </section>
     </main>
 
     <footer>
