Finish creating the website
Add scrollTop property using JavaScript.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         </nav>
     </header>
 
+    <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
+
     <main>
         <section id="home">
             <h2>Discover Our Coffee Delights</h2>
